@@ -15,6 +15,10 @@ use Test::MockModule;
 use Test::File;
 use Test::File::Contents 0.20;
 
+$ENV{SQITCH_CONFIG}        = 'nonexistent.conf';
+$ENV{SQITCH_USER_CONFIG}   = 'nonexistent.user';
+$ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.sys';
+
 my $CLASS;
 
 BEGIN {
