@@ -10,6 +10,10 @@ use Test::NoWarnings;
 use Test::Exception;
 use Encode;
 
+$ENV{SQITCH_CONFIG}        = 'nonexistent.conf';
+$ENV{SQITCH_USER_CONFIG}   = 'nonexistent.user';
+$ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.sys';
+
 my $CLASS = 'App::Sqitch::DateTime';
 require_ok $CLASS;
 
