@@ -11,6 +11,10 @@ use Test::Exception;
 use App::Sqitch;
 use App::Sqitch::Plan;
 
+$ENV{SQITCH_CONFIG}        = 'nonexistent.conf';
+$ENV{SQITCH_USER_CONFIG}   = 'nonexistent.user';
+$ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.sys';
+
 BEGIN { require_ok 'App::Sqitch::Plan::LineList' or die }
 
 my $sqitch = App::Sqitch->new;
