@@ -52,8 +52,9 @@ my $CLASS;
 BEGIN {
     $CLASS = 'App::Sqitch::Engine::oracle';
     require_ok $CLASS or die;
-    $ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.conf';
-    $ENV{SQITCH_USER_CONFIG}   = 'nonexistent.conf';
+    $ENV{SQITCH_CONFIG}        = 'nonexistent.conf';
+    $ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.user';
+    $ENV{SQITCH_USER_CONFIG}   = 'nonexistent.sys';
     delete $ENV{ORACLE_HOME};
 }
 
